- Change remaining "zurücksenden" to "ablegen". [njohner]
- Also expand teams, like groups, on keyword widgets. [Rotonen]
- Translate z3c.formwidget.query (nothing). [njohner]
- Add buttons for managers to get the toc json for meeting periods. [njohner]
- Add absent members to the meeting protocolData. [njohner]
- Add description field to paragraph add form. [njohner]
- Fix bug in disposition ech0160 folder model. [njohner]
- Port disposition tests to integration layer. [njohner]
- Add support for simple language codes in request language negotiation [lgraf]
- Fix typo in favorite error message. [njohner]
- Only display .docx files as possible proposal documents. [Rotonen]
- Render mail descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render mail descriptions as intelligent text on the mail overview. [Rotonen]
- Render document descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render document descriptions as intelligent text on the document overview. [Rotonen]
- Remove the now-unnecessary js files from the favorites template. [Rotonen]


2018.5.7 (2019-01-08)
---------------------

- Make sure a failure to update DocProperties doesn't prevent checkin/checkout or moving of documents. [lgraf]
- Fix invalid end dates of resolved subdossiers when resolving main dossier. [njohner]
- Fixed attaching mails to mail via Office Connector. [Rotonen]
- Remove plonetheme.teamraum upgradesteps. [phgross]


2018.5.6 (2018-12-17)
---------------------

- Bump docxcompose to 1.0.0a15 for bugfixes. [deiferni]
- Set changed date on ObjectAdded instead of ObjectCreatedEvent. [phgross]
- Invalidate cached zip export app. [deiferni]


2018.5.5 (2018-12-10)
---------------------

- Fix task revoking permissions on close/reassign. [phgross]
- Fix an issue with missing zip after concurrent demand callback requests. [deiferni]


2018.5.4 (2018-12-06)
---------------------
