@@ -13,6 +13,7 @@ SAMPLE_MEETING_DATA = {
         'dossier_reference_number': u'Client1 1 / 1',
         'repository_folder_title': u'Strafwesen',
         'number': '1.',
+        'number_raw': 1,
         'title': u'Strafbefehl wegen Bauens ohne Bewilligung',
         'is_paragraph': False,
         'decision_number': 1,
@@ -30,6 +31,7 @@ SAMPLE_MEETING_DATA = {
         'dossier_reference_number': None,
         'repository_folder_title': None,
         'number': '2.',
+        'number_raw': 2,
         'title': u'R\xfccktritt Hans Muster',
         'is_paragraph': False,
         'decision_number': 2}],
