@@ -32,6 +32,8 @@ Changelog
 - Translate z3c.formwidget.query (nothing). [njohner]
 - Add buttons for managers to get the toc json for meeting periods. [njohner]
 - Add absent members to the meeting protocolData. [njohner]
+- Provide both formatted and unformatted agenda item numbers. [Rotonen]
+- Store agenda item numbers as integers. [Rotonen]
 - Add description field to paragraph add form. [njohner]
 - Fix bug in disposition ech0160 folder model. [njohner]
 - Port disposition tests to integration layer. [njohner]
